--- a/code/docker-compose.yml
+++ b/code/docker-compose.yml
@@ -2,27 +2,35 @@ version: '3.1'
 
 services:
 
-  web:
-    build: .
-    restart: unless-stopped
-    build:
-        context: ./web
-        dockerfile: ./Dockerfile
-    ports:
-      - 3000:80
+    web:
+        build: .
+        restart: unless-stopped
+        build:
+            context: ./web
+            dockerfile: ./Dockerfile
+        ports:
+        - 3000:3000
 
-  db:
-    image: mariadb
-    restart: always
-    build:
-        context: ./db
-        dockerfile: ./Dockerfile
-    environment:
-        MYSQL_DATABASE: 'cdp'
-        MYSQL_USER: 'cdp'
-        MYSQL_PASSWORD: 'MYSQL_PASSWORD'
-        MYSQL_ROOT_PASSWORD: 'MYSQL_PASSWORD'
-    ports: 
-        - "3306:3306"
-    volumes:
-        - ./db/sql:/var/db
+    db:
+        image: bitnami/mariadb
+        restart: always
+        environment:
+            MARIADB_DATABASE: 'cdp'
+            MARIADB_USER: 'cdp'
+            MARIADB_PASSWORD: 'cdp'
+            MARIADB_ROOT_PASSWORD: 'cdp'
+        ports: 
+            - "3306:3306"
+        volumes: 
+            - ./db/sql:/docker-entrypoint-initdb.d
+
+    app:
+        depends_on:
+            - db
+        image: phpmyadmin/phpmyadmin
+        container_name: phpmyadmin
+        restart: always
+        ports:
+            - '8080:80'
+        environment:
+            PMA_HOST: db
