--- a/code/web/package.json
+++ b/code/web/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.19.0",
     "config": "^3.3.2",
     "ejs": "^3.1.5",
