--- a/code/web/package.json
+++ b/code/web/package.json
@@ -14,6 +14,7 @@
     "config": "^3.3.2",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "express-router": "0.0.1",
     "mariadb": "^2.5.1",
     "path": "^0.12.7"
   }
