--- a/code/web/package.json
+++ b/code/web/package.json
@@ -17,5 +17,8 @@
     "express-router": "0.0.1",
     "mariadb": "^2.5.1",
     "path": "^0.12.7"
+  },
+  "devDependencies": {
+    "eslint": "^7.14.0"
   }
 }
