--- a/code/web/.eslintrc.json
+++ b/code/web/.eslintrc.json
@@ -24,6 +24,8 @@
         "semi": [
             "error",
             "always"
-        ]
+        ],
+        "brace-style": [2, "stroustrup", { "allowSingleLine": true }],
+        "camelcase": [2, {"properties": "always"}]
     }
 }
