--- a/code/web/package.json
+++ b/code/web/package.json
@@ -15,8 +15,10 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "jasmine": "^3.6.3",
     "mariadb": "^2.5.1",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "selenium-webdriver": "^4.0.0-alpha.7"
   },
   "devDependencies": {
     "eslint": "^7.14.0"
