--- a/code/web/package.json
+++ b/code/web/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.5",
     "express": "^4.17.1",
     "express-router": "0.0.1",
+    "express-session": "^1.17.1",
     "geckodriver": "^1.21.0",
     "jasmine": "^3.6.3",
     "mariadb": "^2.5.1",
